# chat-server

./: .gitignore  .prettierignore  CONTRIBUTION.md  Cargo.toml  Makefile  README.md  SUMMARY.md  TODO.md  package-lock.json  package.json  sample.env  tailwind.config.js
docs/: references.md
journal/: daily-note-2021-10-13.md
migrations/: 20211015202739_init.sql  20211108194243_change_count.sql  20211108211618_account_skip.sql  20211108212852_account_change_count.sql  20211110012728_post_template.sql  20211110020132_account_add_post_template_count.sql  20211110202719_featured_by.sql  20211111183800_time_cursor.sql  20211111185158_post_property.sql  20211111192238_post_location.sql  20211111194943_post_visibility.sql  20211111200906_post_related.sql  20211111223422_post_gender.sql  20211112035400_count.sql  20211112044116_post_delete_by.sql  20211112044527_post_template_delete_by.sql  20211112050304_view.sql  20211112053218_view_index.sql  20211112053540_view_index_2.sql  20211112053614_post_skip_reply.sql  20211112054152_post_reply_count.sql  20211112054750_post_rename.sql  20211112055259_post_template_skip_count.sql  20211113231547_account_show_viewed_action.sql  20211114004507_post_view_post_account_id.sql  20211114023110_post_template_cursor.sql  20211117012856_login_activities_platform.sql  20211208114301_account_image_height.sql  20211215211942_account_views.sql  20211215215625_account_viewed.sql  20211216034130_post_age.sql  20211217085918_account_viewed_by.sql  20211217095930_notifications.sql  (+31 more)
server/: Cargo.toml
server/src/: cli_args.rs  constant.rs  consumer.rs  errors.rs  main.rs  route.rs  types.rs
server/src/account/: constant.rs  handler.rs  mod.rs  model.rs  route.rs  token.rs  util.rs
server/src/account/service/: devices.rs  get_account.rs  get_account_blocks.rs  get_account_likes.rs  get_user.rs  login.rs  login_with_phone.rs  mod.rs  refresh_token_to_access_token.rs  send_phone_code.rs  signin.rs  signout.rs  signup.rs  update_account.rs  update_account_image.rs
server/src/cmd/: admin.rs  args.rs  create_admin.rs  mod.rs
server/src/config/: default.toml  mod.rs
server/src/error/: definition.rs  mod.rs  model.rs
server/src/file/: model.rs  route.rs
server/src/file/service/: upload.rs
server/src/global/: access_token_pair.rs  client.rs  http_client.rs  im_client.rs  mod.rs  refresh_token_pair.rs  sensitive_words.rs  xmpp_client.rs
server/src/global/config/: default.toml  mod.rs
server/src/global/i18n/: mod.rs
server/src/i18n/: mod.rs
server/src/im/: model.rs
server/src/im/service/: create_im_token.rs  get_im_admin_token.rs  mod.rs  send_message.rs  send_welcome.rs  signup.rs  update_im_account.rs
server/src/init/: mod.rs
server/src/middleware/: auth.rs  client_platform.rs  client_version.rs  header_accept_language.rs  header_x_client_date.rs  header_x_client_id.rs  header_x_client_platform.rs  header_x_client_signature.rs  header_x_client_version.rs  header_x_forwarded_for.rs  header_x_real_ip.rs  ip.rs  locale.rs  mod.rs  qs.rs  refresh_token_auth.rs  req_meta.rs  signature.rs  signature_verifier.rs
server/src/notification/: mod.rs  model.rs  route.rs  util.rs
server/src/notification/service/: create_notification.rs  get_notification.rs  mod.rs  push.rs  update_notification.rs
server/src/post/: mod.rs  model.rs  route.rs  util.rs
server/src/post/page/: post.rs
server/src/post/service/: create_post.rs  create_post_template.rs  get_favorite_post.rs  get_post.rs  get_post_template.rs  mod.rs  update_post.rs  update_post_template.rs  update_prost_template.rs
server/src/report/: model.rs  route.rs
server/src/report/service/: create_report.rs  get_report.rs  mod.rs  update_report.rs
server/src/util/: base62_i64.rs  base62_to_i64.rs  color.rs  convert.rs  crypto.rs  date.rs  default.rs  file.rs  id.rs  image.rs  key_pair.rs  mod.rs  option_base62_i64.rs  option_datetime_tz.rs  option_string_i64.rs  page.rs  random.rs  sign.rs  string.rs  string_i64.rs
(+50 files in other folders)
