[package]
edition = "2018"
name = "server"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
accept-language = "2.0"
actix-web = "4.0.0-beta.9"
chrono = {version = "0.4", features = ["serde"]}
config = "0.11"
dotenv = "0.15"
env_logger = "0.9"
fluent = "0.16"
fluent-bundle = "0.15"
fluent-langneg = "0.13"
fluent-syntax = "0.11"
futures = "0.3"
include_dir = "0.6"
intl-memoizer = "0.5"
lazy_static = "1"
log = "0.4"
num_cpus = "1.0"
r2d2 = "0.8"
rand = "0.8"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
shrinkwraprs = "0.3"
sonyflake = "0.1"
sqlx = {version = "0.5", features = ["runtime-actix-native-tls", "chrono", "ipnetwork", "json", "postgres"]}
thiserror = "1.0"
unic-langid = {version = "0.9", features = ["macros"]}
