[package]
edition = "2021"
name = "chat"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

accept-language = "2.0"
aws-sign-v4 = "0.1"
axum = {version = "0.4", features = ["headers"]}
bs62 = "0.1"
chrono = {version = "0.4", features = ["serde"]}
config = "0.11"
deadpool = "0.8"
deadpool-redis = {version = "0.9", features = ["config"]}
derivative = "2.2"
derive_more = {version = "0.99", default-features = false, features = ["display"]}
dialoguer = "0.9"
dotenv = "0.15"
ed25519-dalek = "1.0"
env_logger = "0.9"
fluent-bundle = {version = "0.15"}
futures = "0.3"
futures-util = {version = "0.3.7", default-features = false}
headers = "0.3"
hmac = "0.11"
http-serde = "1.0.3"
include_dir = "0.6"
intl-memoizer = {version = "0.5"}
ipnetwork = "0.18"
ipnetwork17 = {version = "0.17", package = "ipnetwork"}
itertools = "0.10"
jsonapi = "0.7"
jsonwebtoken = "7"
mime = "0.3"
num_cpus = "1.0"
once_cell = "1.8"
pasetors = "0.3"
rand = {version = "0.8"}
rand07 = {version = "0.7", package = "rand"}
reqwest = {version = "0.11", features = ["json"]}
ruma-serde = "0.5"
rust-crypto = "0.2"
semver = "1.0"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
serde_urlencoded = "0.7"
sha2 = "0.9"
sonyflake = "0.1"
sqlx = {version = "0.5", features = ["runtime-actix-native-tls", "chrono", "macros", "ipnetwork", "json", "postgres"]}
structopt = "0.3"
subtle-encoding = "0.5"
thiserror = "1.0"
tokio = {version = "1", features = ["full"]}
tower = {version = "0.4", features = ["util"]}
tracing = "0.1"
tracing-subscriber = "0.2"
unic-langid = {version = "0.9", features = ["macros"]}
url = {version = "2.0", features = ["serde"]}
urlencoding = "2.1"
[build-dependencies]
anyhow = "1.0"
vergen = "5"
